// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can produce OOML from joe_java/axiom_of_power.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">∀A∃P∀B</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\"> </m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">[</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">B∈P⟺∀C</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\"> </m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">(</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">C∈B⇒C∈A</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">)</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">]</m:t>
    </m:r>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/binomial_coefficient.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">C</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">(n,k)</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">=</m:t>
    </m:r>
    <m:sSubSup>
        <m:sSubSupPr>
            <m:ctrlPr/>
        </m:sSubSupPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">C</m:t>
            </m:r>
        </m:e>
        <m:sub>
            <m:r>
                <m:t xml:space=\\"preserve\\">k</m:t>
            </m:r>
        </m:sub>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">n</m:t>
            </m:r>
        </m:sup>
    </m:sSubSup>
    <m:r>
        <m:t xml:space=\\"preserve\\">=</m:t>
    </m:r>
    <m:sPre>
        <m:e>
            <m:sSub>
                <m:e>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">C</m:t>
                    </m:r>
                </m:e>
                <m:sub>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">k</m:t>
                    </m:r>
                </m:sub>
            </m:sSub>
        </m:e>
        <m:sub>
            <m:r>
                <m:t xml:space=\\"preserve\\">n</m:t>
            </m:r>
        </m:sub>
        <m:sup/>
    </m:sPre>
    <m:r>
        <m:t xml:space=\\"preserve\\">=</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">(</m:t>
    </m:r>
    <m:f>
        <m:fPr>
            <m:type m:val=\\"noBar\\"/>
        </m:fPr>
        <m:num>
            <m:r>
                <m:t xml:space=\\"preserve\\">n</m:t>
            </m:r>
        </m:num>
        <m:den>
            <m:r>
                <m:t xml:space=\\"preserve\\">k</m:t>
            </m:r>
        </m:den>
    </m:f>
    <m:r>
        <m:t xml:space=\\"preserve\\">)</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">=</m:t>
    </m:r>
    <m:f>
        <m:fPr>
            <m:type m:val=\\"bar\\"/>
        </m:fPr>
        <m:num>
            <m:r>
                <m:t xml:space=\\"preserve\\">n!</m:t>
            </m:r>
        </m:num>
        <m:den>
            <m:r>
                <m:t xml:space=\\"preserve\\">k!</m:t>
            </m:r>
            <m:r>
                <m:t xml:space=\\"preserve\\">(</m:t>
            </m:r>
            <m:r>
                <m:t xml:space=\\"preserve\\">n−k</m:t>
            </m:r>
            <m:r>
                <m:t xml:space=\\"preserve\\">)</m:t>
            </m:r>
            <m:r>
                <m:t xml:space=\\"preserve\\">!</m:t>
            </m:r>
        </m:den>
    </m:f>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/boolean_algebra.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:rPr>
            <m:nor/>
        </m:rPr>
        <m:t xml:space=\\"preserve\\">Boolean algebra:</m:t>
    </m:r>
    <m:bar>
        <m:barPr>
            <m:pos m:val=\\"top\\"/>
        </m:barPr>
        <m:e>
            <m:sSup>
                <m:sSupPr>
                    <m:ctrlPr/>
                </m:sSupPr>
                <m:e>
                    <m:nary>
                        <m:naryPr>
                            <m:chr m:val=\\"⋃\\"/>
                            <m:limLoc m:val=\\"undOvr\\"/>
                            <m:grow m:val=\\"1\\"/>
                            <m:subHide m:val=\\"off\\"/>
                            <m:supHide m:val=\\"off\\"/>
                        </m:naryPr>
                        <m:sub>
                            <m:r>
                                <m:t xml:space=\\"preserve\\">i=1</m:t>
                            </m:r>
                        </m:sub>
                        <m:sup>
                            <m:r>
                                <m:t xml:space=\\"preserve\\">n</m:t>
                            </m:r>
                        </m:sup>
                        <m:e/>
                    </m:nary>
                    <m:sSub>
                        <m:sSubPr>
                            <m:ctrlPr/>
                        </m:sSubPr>
                        <m:e>
                            <m:r>
                                <m:t xml:space=\\"preserve\\">A</m:t>
                            </m:r>
                        </m:e>
                        <m:sub>
                            <m:r>
                                <m:t xml:space=\\"preserve\\">i</m:t>
                            </m:r>
                        </m:sub>
                    </m:sSub>
                </m:e>
                <m:sub/>
            </m:sSup>
        </m:e>
    </m:bar>
    <m:r>
        <m:t xml:space=\\"preserve\\">=</m:t>
    </m:r>
    <m:nary>
        <m:naryPr>
            <m:chr m:val=\\"⋂\\"/>
            <m:limLoc m:val=\\"undOvr\\"/>
            <m:grow m:val=\\"1\\"/>
            <m:subHide m:val=\\"off\\"/>
            <m:supHide m:val=\\"off\\"/>
        </m:naryPr>
        <m:sub>
            <m:r>
                <m:t xml:space=\\"preserve\\">i=1</m:t>
            </m:r>
        </m:sub>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">n</m:t>
            </m:r>
        </m:sup>
        <m:e/>
    </m:nary>
    <m:bar>
        <m:barPr>
            <m:pos m:val=\\"top\\"/>
        </m:barPr>
        <m:e>
            <m:sSup>
                <m:sSupPr>
                    <m:ctrlPr/>
                </m:sSupPr>
                <m:e>
                    <m:sSub>
                        <m:sSubPr>
                            <m:ctrlPr/>
                        </m:sSubPr>
                        <m:e>
                            <m:r>
                                <m:t xml:space=\\"preserve\\">A</m:t>
                            </m:r>
                        </m:e>
                        <m:sub>
                            <m:r>
                                <m:t xml:space=\\"preserve\\">i</m:t>
                            </m:r>
                        </m:sub>
                    </m:sSub>
                </m:e>
                <m:sub/>
            </m:sSup>
        </m:e>
    </m:bar>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/complex_number.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">c=</m:t>
    </m:r>
    <m:limUpp>
        <m:e>
            <m:groupChr>
                <m:groupChrPr>
                    <m:chr m:val=\\"⏞\\" m:pos=\\"top\\"/>
                </m:groupChrPr>
                <m:e>
                    <m:limLow>
                        <m:e>
                            <m:groupChr>
                                <m:groupChrPr>
                                    <m:chr m:val=\\"⏟\\" m:pos=\\"bot\\"/>
                                </m:groupChrPr>
                                <m:e>
                                    <m:r>
                                        <m:t xml:space=\\"preserve\\"> </m:t>
                                    </m:r>
                                    <m:r>
                                        <m:t xml:space=\\"preserve\\">a</m:t>
                                    </m:r>
                                    <m:r>
                                        <m:t xml:space=\\"preserve\\"> </m:t>
                                    </m:r>
                                </m:e>
                            </m:groupChr>
                        </m:e>
                        <m:lim>
                            <m:r>
                                <m:rPr>
                                    <m:nor/>
                                </m:rPr>
                                <m:t xml:space=\\"preserve\\">real</m:t>
                            </m:r>
                        </m:lim>
                    </m:limLow>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">+</m:t>
                    </m:r>
                    <m:limLow>
                        <m:e>
                            <m:groupChr>
                                <m:groupChrPr>
                                    <m:chr m:val=\\"⏟\\" m:pos=\\"bot\\"/>
                                </m:groupChrPr>
                                <m:e>
                                    <m:r>
                                        <m:t xml:space=\\"preserve\\"> </m:t>
                                    </m:r>
                                    <m:r>
                                        <m:t xml:space=\\"preserve\\">bⅈ</m:t>
                                    </m:r>
                                    <m:r>
                                        <m:t xml:space=\\"preserve\\"> </m:t>
                                    </m:r>
                                </m:e>
                            </m:groupChr>
                        </m:e>
                        <m:lim>
                            <m:r>
                                <m:rPr>
                                    <m:nor/>
                                </m:rPr>
                                <m:t xml:space=\\"preserve\\">imaginary</m:t>
                            </m:r>
                        </m:lim>
                    </m:limLow>
                </m:e>
            </m:groupChr>
        </m:e>
        <m:lim>
            <m:r>
                <m:rPr>
                    <m:nor/>
                </m:rPr>
                <m:t xml:space=\\"preserve\\">complex number</m:t>
            </m:r>
        </m:lim>
    </m:limUpp>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/demorgan.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:rPr>
            <m:nor/>
        </m:rPr>
        <m:t xml:space=\\"preserve\\">Logic:</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">¬</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">(</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">p∧q</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">)</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">⟺</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">(</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">¬p</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">)</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">∨</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">(</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">¬q</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">)</m:t>
    </m:r>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/divergence.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">∇·</m:t>
    </m:r>
    <m:acc>
        <m:accPr>
            <m:chr m:val=\\"⃗\\"/>
        </m:accPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">v</m:t>
            </m:r>
        </m:e>
    </m:acc>
    <m:r>
        <m:t xml:space=\\"preserve\\">=</m:t>
    </m:r>
    <m:f>
        <m:fPr>
            <m:type m:val=\\"bar\\"/>
        </m:fPr>
        <m:num>
            <m:r>
                <m:t xml:space=\\"preserve\\">∂</m:t>
            </m:r>
            <m:sSub>
                <m:sSubPr>
                    <m:ctrlPr/>
                </m:sSubPr>
                <m:e>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">v</m:t>
                    </m:r>
                </m:e>
                <m:sub>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">x</m:t>
                    </m:r>
                </m:sub>
            </m:sSub>
        </m:num>
        <m:den>
            <m:r>
                <m:t xml:space=\\"preserve\\">∂x</m:t>
            </m:r>
        </m:den>
    </m:f>
    <m:r>
        <m:t xml:space=\\"preserve\\">+</m:t>
    </m:r>
    <m:f>
        <m:fPr>
            <m:type m:val=\\"bar\\"/>
        </m:fPr>
        <m:num>
            <m:r>
                <m:t xml:space=\\"preserve\\">∂</m:t>
            </m:r>
            <m:sSub>
                <m:sSubPr>
                    <m:ctrlPr/>
                </m:sSubPr>
                <m:e>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">v</m:t>
                    </m:r>
                </m:e>
                <m:sub>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">y</m:t>
                    </m:r>
                </m:sub>
            </m:sSub>
        </m:num>
        <m:den>
            <m:r>
                <m:t xml:space=\\"preserve\\">∂y</m:t>
            </m:r>
        </m:den>
    </m:f>
    <m:r>
        <m:t xml:space=\\"preserve\\">+</m:t>
    </m:r>
    <m:f>
        <m:fPr>
            <m:type m:val=\\"bar\\"/>
        </m:fPr>
        <m:num>
            <m:r>
                <m:t xml:space=\\"preserve\\">∂</m:t>
            </m:r>
            <m:sSub>
                <m:sSubPr>
                    <m:ctrlPr/>
                </m:sSubPr>
                <m:e>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">v</m:t>
                    </m:r>
                </m:e>
                <m:sub>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">z</m:t>
                    </m:r>
                </m:sub>
            </m:sSub>
        </m:num>
        <m:den>
            <m:r>
                <m:t xml:space=\\"preserve\\">∂z</m:t>
            </m:r>
        </m:den>
    </m:f>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/matrix.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">M=</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">[</m:t>
    </m:r>
    <m:m>
        <m:mPr>
            <m:baseJc m:val=\\"center\\"/>
            <m:plcHide m:val=\\"on\\"/>
            <m:mcs>
                <m:mc>
                    <m:mcPr>
                        <m:count m:val=\\"4\\"/>
                        <m:mcJc m:val=\\"center\\"/>
                    </m:mcPr>
                </m:mc>
            </m:mcs>
        </m:mPr>
        <m:mr>
            <m:e>
                <m:sSub>
                    <m:sSubPr>
                        <m:ctrlPr/>
                    </m:sSubPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">1</m:t>
                        </m:r>
                    </m:sub>
                </m:sSub>
            </m:e>
            <m:e>
                <m:sSubSup>
                    <m:sSubSupPr>
                        <m:ctrlPr/>
                    </m:sSubSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">1</m:t>
                        </m:r>
                    </m:sub>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">q</m:t>
                        </m:r>
                    </m:sup>
                </m:sSubSup>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">…</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:sSubSup>
                    <m:sSubSupPr>
                        <m:ctrlPr/>
                    </m:sSubSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">1</m:t>
                        </m:r>
                    </m:sub>
                    <m:sup>
                        <m:sSup>
                            <m:sSupPr>
                                <m:ctrlPr/>
                            </m:sSupPr>
                            <m:e>
                                <m:r>
                                    <m:t xml:space=\\"preserve\\">q</m:t>
                                </m:r>
                            </m:e>
                            <m:sup>
                                <m:r>
                                    <m:t xml:space=\\"preserve\\">n−1</m:t>
                                </m:r>
                            </m:sup>
                        </m:sSup>
                    </m:sup>
                </m:sSubSup>
            </m:e>
        </m:mr>
        <m:mr>
            <m:e>
                <m:sSub>
                    <m:sSubPr>
                        <m:ctrlPr/>
                    </m:sSubPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sub>
                </m:sSub>
            </m:e>
            <m:e>
                <m:sSubSup>
                    <m:sSubSupPr>
                        <m:ctrlPr/>
                    </m:sSubSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sub>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">q</m:t>
                        </m:r>
                    </m:sup>
                </m:sSubSup>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">…</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:sSubSup>
                    <m:sSubSupPr>
                        <m:ctrlPr/>
                    </m:sSubSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sub>
                    <m:sup>
                        <m:sSup>
                            <m:sSupPr>
                                <m:ctrlPr/>
                            </m:sSupPr>
                            <m:e>
                                <m:r>
                                    <m:t xml:space=\\"preserve\\">q</m:t>
                                </m:r>
                            </m:e>
                            <m:sup>
                                <m:r>
                                    <m:t xml:space=\\"preserve\\">n−1</m:t>
                                </m:r>
                            </m:sup>
                        </m:sSup>
                    </m:sup>
                </m:sSubSup>
            </m:e>
        </m:mr>
        <m:mr>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">⋮</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">⋮</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">⋱</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">⋮</m:t>
                </m:r>
            </m:e>
        </m:mr>
        <m:mr>
            <m:e>
                <m:sSub>
                    <m:sSubPr>
                        <m:ctrlPr/>
                    </m:sSubPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">m</m:t>
                        </m:r>
                    </m:sub>
                </m:sSub>
            </m:e>
            <m:e>
                <m:sSubSup>
                    <m:sSubSupPr>
                        <m:ctrlPr/>
                    </m:sSubSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">m</m:t>
                        </m:r>
                    </m:sub>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">q</m:t>
                        </m:r>
                    </m:sup>
                </m:sSubSup>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">…</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:sSubSup>
                    <m:sSubSupPr>
                        <m:ctrlPr/>
                    </m:sSubSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">α</m:t>
                        </m:r>
                    </m:e>
                    <m:sub>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">m</m:t>
                        </m:r>
                    </m:sub>
                    <m:sup>
                        <m:sSup>
                            <m:sSupPr>
                                <m:ctrlPr/>
                            </m:sSupPr>
                            <m:e>
                                <m:r>
                                    <m:t xml:space=\\"preserve\\">q</m:t>
                                </m:r>
                            </m:e>
                            <m:sup>
                                <m:r>
                                    <m:t xml:space=\\"preserve\\">n−1</m:t>
                                </m:r>
                            </m:sup>
                        </m:sSup>
                    </m:sup>
                </m:sSubSup>
            </m:e>
        </m:mr>
    </m:m>
    <m:r>
        <m:t xml:space=\\"preserve\\">]</m:t>
    </m:r>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/pythagorean.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:sSup>
        <m:sSupPr>
            <m:ctrlPr/>
        </m:sSupPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">a</m:t>
            </m:r>
        </m:e>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">2</m:t>
            </m:r>
        </m:sup>
    </m:sSup>
    <m:r>
        <m:t xml:space=\\"preserve\\">+</m:t>
    </m:r>
    <m:sSup>
        <m:sSupPr>
            <m:ctrlPr/>
        </m:sSupPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">b</m:t>
            </m:r>
        </m:e>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">2</m:t>
            </m:r>
        </m:sup>
    </m:sSup>
    <m:r>
        <m:t xml:space=\\"preserve\\">=</m:t>
    </m:r>
    <m:sSup>
        <m:sSupPr>
            <m:ctrlPr/>
        </m:sSupPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">c</m:t>
            </m:r>
        </m:e>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">2</m:t>
            </m:r>
        </m:sup>
    </m:sSup>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/pythagorean2.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:m>
        <m:mPr>
            <m:baseJc m:val=\\"center\\"/>
            <m:plcHide m:val=\\"on\\"/>
            <m:mcs>
                <m:mc>
                    <m:mcPr>
                        <m:count m:val=\\"3\\"/>
                        <m:mcJc m:val=\\"center\\"/>
                    </m:mcPr>
                </m:mc>
            </m:mcs>
        </m:mPr>
        <m:mr>
            <m:e>
                <m:sSup>
                    <m:sSupPr>
                        <m:ctrlPr/>
                    </m:sSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">(a+b)</m:t>
                        </m:r>
                    </m:e>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sup>
                </m:sSup>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">=</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:sSup>
                    <m:sSupPr>
                        <m:ctrlPr/>
                    </m:sSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">c</m:t>
                        </m:r>
                    </m:e>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sup>
                </m:sSup>
                <m:r>
                    <m:t xml:space=\\"preserve\\">+4⋅(</m:t>
                </m:r>
                <m:f>
                    <m:fPr>
                        <m:type m:val=\\"bar\\"/>
                    </m:fPr>
                    <m:num>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">1</m:t>
                        </m:r>
                    </m:num>
                    <m:den>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:den>
                </m:f>
                <m:r>
                    <m:t xml:space=\\"preserve\\">ab)</m:t>
                </m:r>
            </m:e>
        </m:mr>
        <m:mr>
            <m:e>
                <m:sSup>
                    <m:sSupPr>
                        <m:ctrlPr/>
                    </m:sSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">a</m:t>
                        </m:r>
                    </m:e>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sup>
                </m:sSup>
                <m:r>
                    <m:t xml:space=\\"preserve\\">+2ab+</m:t>
                </m:r>
                <m:sSup>
                    <m:sSupPr>
                        <m:ctrlPr/>
                    </m:sSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">b</m:t>
                        </m:r>
                    </m:e>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sup>
                </m:sSup>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">=</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:sSup>
                    <m:sSupPr>
                        <m:ctrlPr/>
                    </m:sSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">c</m:t>
                        </m:r>
                    </m:e>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sup>
                </m:sSup>
                <m:r>
                    <m:t xml:space=\\"preserve\\">+2ab</m:t>
                </m:r>
            </m:e>
        </m:mr>
        <m:mr>
            <m:e>
                <m:sSup>
                    <m:sSupPr>
                        <m:ctrlPr/>
                    </m:sSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">a</m:t>
                        </m:r>
                    </m:e>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sup>
                </m:sSup>
                <m:r>
                    <m:t xml:space=\\"preserve\\">+</m:t>
                </m:r>
                <m:sSup>
                    <m:sSupPr>
                        <m:ctrlPr/>
                    </m:sSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">b</m:t>
                        </m:r>
                    </m:e>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sup>
                </m:sSup>
            </m:e>
            <m:e>
                <m:r>
                    <m:t xml:space=\\"preserve\\">=</m:t>
                </m:r>
            </m:e>
            <m:e>
                <m:sSup>
                    <m:sSupPr>
                        <m:ctrlPr/>
                    </m:sSupPr>
                    <m:e>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">c</m:t>
                        </m:r>
                    </m:e>
                    <m:sup>
                        <m:r>
                            <m:t xml:space=\\"preserve\\">2</m:t>
                        </m:r>
                    </m:sup>
                </m:sSup>
            </m:e>
        </m:mr>
    </m:m>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/quadratic_formula.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">x=</m:t>
    </m:r>
    <m:f>
        <m:fPr>
            <m:type m:val=\\"bar\\"/>
        </m:fPr>
        <m:num>
            <m:r>
                <m:t xml:space=\\"preserve\\">−b±</m:t>
            </m:r>
            <m:rad>
                <m:radPr>
                    <m:degHide m:val=\\"on\\"/>
                </m:radPr>
                <m:deg/>
                <m:e>
                    <m:sSup>
                        <m:sSupPr>
                            <m:ctrlPr/>
                        </m:sSupPr>
                        <m:e>
                            <m:r>
                                <m:t xml:space=\\"preserve\\">b</m:t>
                            </m:r>
                        </m:e>
                        <m:sup>
                            <m:r>
                                <m:t xml:space=\\"preserve\\">2</m:t>
                            </m:r>
                        </m:sup>
                    </m:sSup>
                    <m:r>
                        <m:t xml:space=\\"preserve\\">−4ac</m:t>
                    </m:r>
                </m:e>
            </m:rad>
        </m:num>
        <m:den>
            <m:r>
                <m:t xml:space=\\"preserve\\">2a</m:t>
            </m:r>
        </m:den>
    </m:f>
</m:oMath>"
`;

exports[`Can produce OOML from joe_java/sophomores_dream.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:nary>
        <m:naryPr>
            <m:chr m:val=\\"∫\\"/>
            <m:limLoc m:val=\\"subSup\\"/>
            <m:grow m:val=\\"1\\"/>
            <m:subHide m:val=\\"off\\"/>
            <m:supHide m:val=\\"off\\"/>
        </m:naryPr>
        <m:sub>
            <m:r>
                <m:t xml:space=\\"preserve\\">0</m:t>
            </m:r>
        </m:sub>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">1</m:t>
            </m:r>
        </m:sup>
        <m:e/>
    </m:nary>
    <m:sSup>
        <m:sSupPr>
            <m:ctrlPr/>
        </m:sSupPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">x</m:t>
            </m:r>
        </m:e>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">x</m:t>
            </m:r>
        </m:sup>
    </m:sSup>
    <m:r>
        <m:t xml:space=\\"preserve\\">ⅆx=</m:t>
    </m:r>
    <m:nary>
        <m:naryPr>
            <m:chr m:val=\\"∑\\"/>
            <m:limLoc m:val=\\"undOvr\\"/>
            <m:grow m:val=\\"1\\"/>
            <m:subHide m:val=\\"off\\"/>
            <m:supHide m:val=\\"off\\"/>
        </m:naryPr>
        <m:sub>
            <m:r>
                <m:t xml:space=\\"preserve\\">n=1</m:t>
            </m:r>
        </m:sub>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">∞</m:t>
            </m:r>
        </m:sup>
        <m:e/>
    </m:nary>
    <m:sSup>
        <m:sSupPr>
            <m:ctrlPr/>
        </m:sSupPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">(</m:t>
            </m:r>
            <m:r>
                <m:t xml:space=\\"preserve\\">−1</m:t>
            </m:r>
            <m:r>
                <m:t xml:space=\\"preserve\\">)</m:t>
            </m:r>
        </m:e>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">n+1</m:t>
            </m:r>
        </m:sup>
    </m:sSup>
    <m:r>
        <m:t xml:space=\\"preserve\\"></m:t>
    </m:r>
    <m:sSup>
        <m:sSupPr>
            <m:ctrlPr/>
        </m:sSupPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">n</m:t>
            </m:r>
        </m:e>
        <m:sup>
            <m:r>
                <m:t xml:space=\\"preserve\\">−n</m:t>
            </m:r>
        </m:sup>
    </m:sSup>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/groupchr.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:groupChr>
        <m:groupChrPr>
            <m:chr m:val=\\"b\\" m:pos=\\"bot\\"/>
        </m:groupChrPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">a</m:t>
            </m:r>
        </m:e>
    </m:groupChr>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/menclose.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:rad>
        <m:radPr>
            <m:degHide m:val=\\"on\\"/>
        </m:radPr>
        <m:deg/>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">a+b</m:t>
            </m:r>
        </m:e>
    </m:rad>
    <m:rad>
        <m:radPr>
            <m:degHide m:val=\\"on\\"/>
        </m:radPr>
        <m:deg/>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">c+d</m:t>
            </m:r>
        </m:e>
    </m:rad>
    <m:borderBox>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">e+f</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">g+h</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">i+j</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">k+l</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">m+n</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">o+p</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">q+r</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">s+t</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">u+v</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
            <m:strikeBLTR m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">w+x</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
            <m:strikeTLBR m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">y+z</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
            <m:strikeV m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">aa+bb</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
            <m:strikeH m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">cc+dd</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">ee+ff</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">gg+hh</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">ii+jj</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">kk+ll</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
    <m:borderBox>
        <m:borderBoxPr>
            <m:hideTop m:val=\\"on\\"/>
            <m:hideBot m:val=\\"on\\"/>
            <m:hideLeft m:val=\\"on\\"/>
            <m:hideRight m:val=\\"on\\"/>
        </m:borderBoxPr>
        <m:e>
            <m:r>
                <m:t xml:space=\\"preserve\\">mm+nn</m:t>
            </m:r>
        </m:e>
    </m:borderBox>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/ms.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">2</m:t>
    </m:r>
    <m:r>
        <m:rPr>
            <m:sty m:val=\\"p\\"/>
        </m:rPr>
        <m:t xml:space=\\"preserve\\">\\"abc\\"</m:t>
    </m:r>
    <m:r>
        <m:rPr>
            <m:nor/>
        </m:rPr>
        <m:t xml:space=\\"preserve\\">text</m:t>
    </m:r>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/mstyle.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:limLow>
        <m:e>
            <m:argPr>
                <m:scrLvl m:val=\\"2\\"/>
            </m:argPr>
            <m:r>
                <m:t xml:space=\\"preserve\\">a</m:t>
            </m:r>
        </m:e>
        <m:lim>
            <m:argPr>
                <m:scrLvl m:val=\\"2\\"/>
            </m:argPr>
            <m:r>
                <m:t xml:space=\\"preserve\\">2</m:t>
            </m:r>
        </m:lim>
    </m:limLow>
    <m:r>
        <m:t xml:space=\\"preserve\\">+2=4</m:t>
    </m:r>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/simple.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:f>
        <m:fPr>
            <m:type m:val=\\"bar\\"/>
        </m:fPr>
        <m:num>
            <m:r>
                <m:t xml:space=\\"preserve\\">(</m:t>
            </m:r>
            <m:r>
                <m:t xml:space=\\"preserve\\">4x−6n</m:t>
            </m:r>
            <m:r>
                <m:t xml:space=\\"preserve\\">)</m:t>
            </m:r>
        </m:num>
        <m:den>
            <m:r>
                <m:t xml:space=\\"preserve\\">34</m:t>
            </m:r>
        </m:den>
    </m:f>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/single_line.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">2+2=4</m:t>
    </m:r>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/single_line_with_glyph.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:rPr>
            <m:nor/>
        </m:rPr>
        <m:t xml:space=\\"preserve\\">GothicCapitalR</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">+2=4</m:t>
    </m:r>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/single_line_with_styling.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <w:rPr>
            <w:b/>
        </w:rPr>
        <m:rPr>
            <m:nor/>
            <m:sty m:val=\\"b\\"/>
        </m:rPr>
        <m:t xml:space=\\"preserve\\">x</m:t>
    </m:r>
    <m:r>
        <m:t xml:space=\\"preserve\\">+2</m:t>
    </m:r>
    <m:r>
        <w:rPr>
            <w:i/>
        </w:rPr>
        <m:rPr>
            <m:nor/>
        </m:rPr>
        <m:t xml:space=\\"preserve\\">=4</m:t>
    </m:r>
</m:oMath>"
`;

exports[`Can produce OOML from mathml2omml/single_line_with_symbol.mml 1`] = `
"<m:oMath xmlns:m=\\"http://schemas.openxmlformats.org/officeDocument/2006/math\\">
    <m:r>
        <m:t xml:space=\\"preserve\\">2+ℜ=4</m:t>
    </m:r>
</m:oMath>"
`;
